resolve conflicts, fix deprecations, improve flow, update model resolution, uniform naming